✅ Update task list with confirmed reservation details for Schäferstube on 6/21

--- a/タスク✅.md
+++ b/タスク✅.md
@@ -8,7 +8,7 @@
 
 - [ ] Chez Vrony（ツェルマット）6/20 19:30 電話予約 ※テラス席リクエスト
 
-- [ ] Zermatt 6/21 ディナー選定（Schäferstube or After Seven）& 予約
+- [ ] Schäferstube（ツェルマット）6/21 18:30 予約
 
 - [ ] C und M Café-Bar-Restaurant（グリンデルワルト）6/22 19:30 予約
 
