✅ Mark reservations as completed for specific restaurants in Zurich, Grindelwald, and Bern

--- a/タスク✅.md
+++ b/タスク✅.md
@@ -4,7 +4,7 @@
 
 - [ ] Swiss Chuchi（チューリッヒ）6/19 21:15 公式予約フォーム
 
-- [ ] Zeughauskeller（チューリッヒ・バックアップ）6/19 21:15 公式予約フォーム
+- [x] Zeughauskeller（チューリッヒ・バックアップ）6/19 21:15 公式予約フォーム
 
 - [ ] Chez Vrony（ツェルマット）6/20 19:30 電話予約 ※テラス席リクエスト
 
@@ -12,9 +12,9 @@
 
 - [ ] C und M Café-Bar-Restaurant（グリンデルワルト）6/22 19:30 予約
 
-- [ ] Barry's Restaurant（グリンデルワルト）6/23 18:30 オンライン予約
+- [x] Barry's Restaurant（グリンデルワルト）6/23 18:30 オンライン予約
 
-- [ ] Altes Tramdepot（ベルン）6/24 12:30 ランチ予約
+- [x] Altes Tramdepot（ベルン）6/24 12:30 ランチ予約
 
 ## アクティビティ予約
 
