✏️ Remove representative name field from personal information list

--- a/個人情報.md
+++ b/個人情報.md
@@ -1,7 +1,7 @@
 - 代表者（搭乗者）の氏名（ローマ字フルネーム）
-性別（Male / Female）
-年齢
-体重（kg）
-国籍（Country ドロップダウン用。Japan で OK ならそのまま入力します）
-携帯電話番号（国番号 +81 を含めた形式）
-予約確認用 E-mail アドレス
+- 性別（Male / Female）
+- 年齢
+- 体重（kg）
+- 国籍（Country ドロップダウン用。Japan で OK ならそのまま入力します）
+- 携帯電話番号（国番号 +81 を含めた形式）
+- 予約確認用 E-mail アドレス
