✏️ Add email address for reservation confirmation

--- a/個人情報.md
+++ b/個人情報.md
@@ -4,4 +4,4 @@
 - 体重（kg）: 65
 - 国籍（Country ドロップダウン用。Japan で OK ならそのまま入力します）: Japan
 - 携帯電話番号（国番号 +81 を含めた形式）: 090-3173-6950
-- 予約確認用 E-mail アドレス
+- 予約確認用 E-mail アドレス: shayashi683@gmail.com
