--- a/個人情報.md
+++ b/個人情報.md
@@ -5,3 +5,11 @@
 - 国籍（Country ドロップダウン用。Japan で OK ならそのまま入力します）: Japan
 - 携帯電話番号（国番号 +81 を含めた形式）: 090-3173-6950
 - 予約確認用 E-mail アドレス: shayashi683@gmail.com
+
+- 同行者の氏名（ローマ字フルネーム）:
+- 性別（Male / Female）:
+- 年齢:
+- 体重（kg）:
+- 国籍（Country ドロップダウン用。Japan で OK ならそのまま入力します）:
+- 携帯電話番号（国番号 +81 を含めた形式）:
+- 予約確認用 E-mail アドレス:
