✏️ Update personal information details with age and weight adjustments

--- a/個人情報.md
+++ b/個人情報.md
@@ -8,8 +8,8 @@
 
 - 同行者の氏名（ローマ字フルネーム）: Mizuki Hayashi
 - 性別（Male / Female）: Female
-- 年齢: 
-- 体重（kg）: 50
-- 国籍（Country ドロップダウン用。Japan で OK ならそのまま入力します）:
-- 携帯電話番号（国番号 +81 を含めた形式）:
-- 予約確認用 E-mail アドレス:
+- 年齢: 32
+- 体重（kg）: 49
+- 国籍（Country ドロップダウン用。Japan で OK ならそのまま入力します）: Japan
+- 携帯電話番号（国番号 +81 を含めた形式）: 090-3173-6950
+- 予約確認用 E-mail アドレス: shayashi683@gmail.com
