✏️ Update email address in personal information document

--- a/個人情報.md
+++ b/個人情報.md
@@ -12,4 +12,4 @@
 - 体重（kg）: 49
 - 国籍（Country ドロップダウン用。Japan で OK ならそのまま入力します）: Japan
 - 携帯電話番号（国番号 +81 を含めた形式）: 090-6727-8937
-- 予約確認用 E-mail アドレス: shayashi683@gmail.com
+- 予約確認用 E-mail アドレス: mizuki.canada.0805@gmail.com
