--- a/旅程🗓/3日目🗓.md
+++ b/旅程🗓/3日目🗓.md
@@ -17,7 +17,7 @@
   - 03:50 発の早朝列車【Gornergrat Bahn】利用（早朝ダイヤ要確認）
 - 06:00–07:30 下山 → ホテル戻り仮眠 & 朝食
 - 09:45 FLYBYPARA オフィス集合、装備 & ブリーフィング（Bahnhofplatz 7）
-- 10:00–12:00 パラグライダー tandem フライト（Fly Zermatt "Classic" 20–25 分）
+- 10:00–12:00 パラグライダー tandem フライト（FLYBYPARA "Fly Matterhorn VIP" 25–30 分）
 - 12:00–13:30 昼食 & 休憩（Furi エリアのカフェまたは村中心部）
 - 13:30–16:30 ハイキング: Furi → Zmutt → Zermatt（吊り橋 & アルプス牧歌的風景）
 - 16:30–18:00 スパ & サウナ（ホテルまたは Mont Cervin Palace Day Spa）
