--- a/旅程🗓/5日目🗓.md
+++ b/旅程🗓/5日目🗓.md
@@ -22,7 +22,11 @@
 - 14:00–15:00 アクティビティ ② マウンテンカート First → Schreckfeld（3 km）
 - 15:00–15:30 アクティビティ ③ トロッティバイク Schreckfeld → Bort（4.5 km）
 - 15:30–16:00 【ゴンドラ】Bort → Grindelwald
-- 16:00–18:00 ホテルでシャワー & 休憩／村散策（メインストリートお土産）
+- 16:00–16:10 徒歩：Grindelwald 駅前 → Pfingstegg ロープウェイ山麓駅
+- 16:10–16:20 【ロープウェイ】Grindelwald → Pfingstegg
+- 16:20–17:20 Pfingstegg ローデルバーン滑走 2–3 回 & 展望テラスで休憩
+- 17:20–17:30 【ロープウェイ】Pfingstegg → Grindelwald
+- 17:30–18:00 ホテル戻り & シャワー
 - 18:30–20:30 ディナー：Barry's Restaurant（アルペンモダン料理）
 - 21:00 就寝（翌日は早朝移動）
 
@@ -46,4 +50,7 @@
 - First Flyer：4 分（片道）
 - マウンテンカート：15 分
 - トロッティバイク：20 分
-- Bort → Grindelwald（ゴンドラ）：15 分 
+- Bort → Grindelwald（ゴンドラ）：15 分
+- Grindelwald 駅 → Pfingstegg ロープウェイ山麓駅：徒歩 10 分
+- Grindelwald → Pfingstegg：ロープウェイ 10 分
+- Pfingstegg ローデルバーン滑走：5 分（1 回） 
