❌ Cancel First Flyer activity in the itinerary for day 5

--- a/旅程🗓/5日目🗓.md
+++ b/旅程🗓/5日目🗓.md
@@ -18,7 +18,7 @@
 - 08:45–11:30 ハイキング: First → Faulhorn → First（パノラマ尾根コース、往復 6.5 km）
   - Faulhorn 山頂（2681m）からベルナーオーバーラント三山一望
 - 11:30–12:30 昼食：First Bergrestaurant（テラス席）
-- 12:30–14:00 アクティビティ ① First Flyer（ジップライン 800m / 84km/h）
+- ~~12:30–14:00 アクティビティ ① First Flyer（ジップライン 800m / 84km/h）~~（キャンセル）
 - 14:00–15:00 アクティビティ ② マウンテンカート First → Schreckfeld（3 km）
 - 15:00–15:30 アクティビティ ③ トロッティバイク Schreckfeld → Bort（4.5 km）
 - 15:30–16:00 【ゴンドラ】Bort → Grindelwald
