✏️ Update task list to remove redundant Zurich Card purchase due to overlap with Swiss Travel Pass

--- a/タスク✅.md
+++ b/タスク✅.md
@@ -28,7 +28,7 @@
 
 - [ ] Swiss Travel Pass 4日間（デジタル）購入（出発前／6/18まで）
 
-- [ ] Zurich Card 24h 6/19 空港到着時に購入
+- ~~Zurich Card 24h 6/19 空港到着時に購入~~（不要：STPと重複）
 
 - [ ] Seat reservations (IC長距離区間) 必要か最終確認
 
