🎂 Add placeholder for birthday field in personal information document

--- a/個人情報.md
+++ b/個人情報.md
@@ -1,5 +1,6 @@
 - 代表者の氏名（ローマ字フルネーム）: Shogo Hayashi
 - 性別（Male / Female）: Male
+- 誕生日：
 - 年齢: 28
 - 体重（kg）: 65
 - 国籍（Country ドロップダウン用。Japan で OK ならそのまま入力します）: Japan
