--- a/個人情報.md
+++ b/個人情報.md
@@ -1,6 +1,6 @@
 - 代表者の氏名（ローマ字フルネーム）: Shogo Hayashi
 - 性別（Male / Female）: Male
-- 誕生日：
+- 誕生日：1996/08/03
 - 年齢: 28
 - 体重（kg）: 65
 - 国籍（Country ドロップダウン用。Japan で OK ならそのまま入力します）: Japan
@@ -9,6 +9,7 @@
 
 - 同行者の氏名（ローマ字フルネーム）: Mizuki Hayashi
 - 性別（Male / Female）: Female
+- 誕生日：1991/08/03
 - 年齢: 32
 - 体重（kg）: 49
 - 国籍（Country ドロップダウン用。Japan で OK ならそのまま入力します）: Japan
