✅ Update task status to reflect reservation of Swiss Travel Pass Flex

--- a/タスク✅.md
+++ b/タスク✅.md
@@ -26,7 +26,7 @@
 
 ## 交通パス・チケット
 
-- [ ] Swiss Travel Pass 4日間（デジタル）購入（出発前／6/18まで）
+- [x] Swiss Travel Pass Flex 4日間（2等）2名 予約済（Ref #1100202500890152）
 
 - ~~Zurich Card 24h 6/19 空港到着時に購入~~（不要：STPと重複）
 
