🛤️ Update travel plan to use Swiss Travel Pass Flex instead of Zurich Card for improved coverage and efficiency

--- a/旅程🗓/1日目🗓.md
+++ b/旅程🗓/1日目🗓.md
@@ -13,8 +13,8 @@
 - 夜: Swiss Chuchi（フォンデュ）
 
 ## 予定（詳細プラン）
-- 18:20–19:30 空港到着 → 入国・荷物受取 → Zurich Card 購入（所要 70 分）
-  - 市内交通 24h 乗り放題＋博物館割引の Zurich Card (CHF 29) を購入しておくとお得。
+- 18:20–19:10 空港到着 → 入国・荷物受取 → Swiss Travel Pass Flex Day 1 アクティベート（所要 50 分）
+  - STP Flex を有効化すれば 空港駅〜Zurich HB の列車と市内交通が無料になります。
 - 19:30–20:00 【鉄道 S-Bahn / IC】空港駅 → チューリッヒ中央駅（HB）11 分＋ホーム移動 5 分（合計 17 分）
 - 20:00–20:15 【S4】Zurich HB → Zürich Manegg 7 分＋徒歩 3 分 → MEININGER Hotel Zürich Greencity（チェックイン）
 - 20:15–21:15 旧市街イブニング・ウォーク（ホテル → 旧市街へ【S4 + 徒歩 15 分】）
@@ -32,7 +32,7 @@
 - 19 時台に間に合えば Limmat 川〜チューリッヒ湖 90 分サンセットクルーズ（Zurich HB 発 19:15 頃）もロマンチック。
 
 ### ポイントまとめ
-1. Zurich Card で交通・博物館を網羅し、翌日午前まで有効活用。
+1. Swiss Travel Pass Flex を Day 1 にアクティベートし、交通・博物館をカバー。
 2. "歩いて回れる旧市街"に絞って移動負担を最小化。
 3. スイス名物（フォンデュ／ソーセージ／チョコ）を 3 時間でコンプリート。
 
