🎒 Add additional travel essentials and outdoor gear to the packing list

--- a/持ち物リスト🎒.md
+++ b/持ち物リスト🎒.md
@@ -8,6 +8,7 @@
 - [ ] 現金（円 / CHF）
 - [ ] 旅程表・ホテルバウチャー
 - [ ] 国際運転免許証（必要なら）
+- [ ] Swiss Travel Pass Flex（印刷控え & PDF）
 
 ## デジタル・通信機器
 - [ ] スマートフォン ×2
@@ -18,6 +19,7 @@
 - [ ] 変換プラグ（Cタイプ: スイス）
 - [ ] 電源タップ（USB 口付）
 - [ ] SIMカード / eSIM QR
+- [ ] モバイル Wi-Fi ルーター（テザリング共有用）
 
 ## 衣類（6月・山岳地帯想定）
 - [ ] 半袖シャツ ×3
@@ -30,6 +32,9 @@
 - [ ] スポーツブラ / タイツ（ハイキング用）
 - [ ] スニーカー / トレッキングシューズ
 - [ ] サンダル（ホテル / 機内）
+- [ ] サングラス（UV400）
+- [ ] キャップ / ニット帽（防寒・日よけ）
+- [ ] 軽量グローブ（薄手）
 
 ## 洗面・衛生
 - [ ] 歯ブラシ・歯磨き粉
@@ -48,5 +53,11 @@
 - [ ] mini 三脚 & リモートシャッター
 - [ ] 目隠しアイマスク・耳栓（機内）
 - [ ] お土産用エコバッグ
+- [ ] トレッキングポール（伸縮式）
+- [ ] 速乾タオル / スポーツタオル
+- [ ] 折りたたみハンガー & 携帯洗剤
+- [ ] ジップロック（大小）
+- [ ] 予備マスク ×2
+- [ ] 保冷バッグ & 保冷剤（チョコ・チーズ用）
 
 > ✅ チェックを入れて準備状況を管理してください。 
